--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,3 +37,5 @@ const display_image = image ? image : astropodConfig.cover;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(display_image, astropodConfig.link)} />
+
+<link rel="stylesheet" href="https://cdn.prism-host.com/fa6/css/all.min.css" />
